[package]
name = "tiny-vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.11.0"
kvm-bindings = "0.5.0"
anyhow = "1.0.56"
libc = "0.2.132"
vm-memory = { version = ">=0.7.0", features = ["backend-mmap", "backend-bitmap"] }
